--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,9 @@
   <body class="page__body">
     <header class="header" id="home">
       <div class="header__top-nav grid grid--tablet grid--desktop">
-        <div class="header__top-nav__museum grid__item--tablet-4-6 grid__item--desktop-6-12">
+        <div class="header__top-nav__museum
+          grid__item--tablet-4-6
+          grid__item--desktop-6-12">
         </div>
         <div class="header__top-nav__container
           grid__item--tablet-1-5
@@ -46,8 +48,7 @@
         </div>
 
         <div class="grid__item--tablet-1-3 grid__item--desktop-1-5">
-          <div class="header__top-nav__name
-            header__top-nav__name--h">
+          <div class="header__top-nav__name header__top-nav__name--h">
             <h1 class="header__top-nav__name__item">ХУДОЖНІЙ </h1>
           </div>
           <div class="header__top-nav__name
@@ -218,47 +219,63 @@
         <h1 class="gallery__name">
           Галерея
         </h1>
-        <div class="gallery__slideshow-container grid grid--desktop ">
-          <div class="
-            gallery__slideshow-container__mySlides
-            gallery__slideshow-container__mySlides--1
-            gallery__fade
-            grid__item--desktop-1-4">
+        <div class="gallery__slideshow grid grid--desktop">
+          <div class="gallery__wrapper grid__item--desktop-1-4">
+            <div class="
+              gallery__photo
+              gallery__mySlides
+              gallery__mySlides--1
+              gallery__fade">
+              <img src="./images/photos/gallery/1.svg" alt="mySlides--1">
+            </div>
           </div>
 
-          <div class="
-            gallery__slideshow-container__mySlides
-            gallery__slideshow-container__mySlides--2
-            gallery__fade
-            grid__item--desktop-5-12">
+          <div class="gallery__wrapper grid__item--desktop-5-12">
+            <div class="
+              gallery__photo
+              gallery__mySlides
+              gallery__mySlides--2
+              gallery__fade">
+              <img src="./images/photos/gallery/1.svg" alt="mySlides--2">
+            </div>
           </div>
 
-          <div class="
-            gallery__slideshow-container__mySlides
-            gallery__slideshow-container__mySlides--3
-            gallery__fade
-            grid__item--desktop-1-8">
+          <div class="gallery__wrapper grid__item--desktop-1-8">
+            <div class="
+              gallery__photo
+              gallery__mySlides
+              gallery__mySlides--3
+              gallery__fade">
+              <img src="./images/photos/gallery/1.svg" alt="mySlides--3">
+            </div>
           </div>
 
-          <div class="
-           gallery__slideshow-container__mySlides
-           gallery__slideshow-container__mySlides--4
-           gallery__fade
-           grid__item--desktop-9-12">
+          <div class="gallery__wrapper grid__item--desktop-9-12">
+            <div class="
+              gallery__photo
+              gallery__mySlides
+              gallery__mySlides--4
+              gallery__fade">
+              <img src="./images/photos/gallery/1.svg" alt="mySlides--4">
+            </div>
           </div>
 
-          <div class="
-           gallery__slideshow-container__mySlides
-           gallery__slideshow-container__mySlides--5
-           gallery__fade">
+          <div class="gallery__wrapper">
+            <div class="
+              gallery__photo
+              gallery__mySlides
+              gallery__mySlides--5
+              gallery__fade">
+              <img src="./images/photos/gallery/1.svg" alt="mySlides--5">
+            </div>
           </div>
         </div>
         <div class="gallery__items">
-          <span class="gallery__dot desktop " onclick="currentSlide(1)"></span>
-          <span class="gallery__dot desktop" onclick="currentSlide(2)"></span>
-          <span class="gallery__dot desktop" onclick="currentSlide(3)"></span>
-          <span class="gallery__dot desktop" onclick="currentSlide(4)"></span>
-          <span class="gallery__dot tablet desktop" onclick="currentSlide(5)"></span>
+          <span class="gallery__dot" onclick="currentSlide(1)"></span>
+          <span class="gallery__dot" onclick="currentSlide(2)"></span>
+          <span class="gallery__dot" onclick="currentSlide(3)"></span>
+          <span class="gallery__dot" onclick="currentSlide(4)"></span>
+          <span class="gallery__dot gallery__dot--tablet" onclick="currentSlide(5)"></span>
         </div>
       </div>
 
