--- a/src/index.html
+++ b/src/index.html
@@ -388,12 +388,13 @@
           <form action="/" method="get">
             <div class="subscribe__button">
               <input
-                name="email"
+                class="subscribe__field"
                 type="email"
-                placeholder="Email"
-                class="subscribe__field
-                form-field" required
-             >
+                name="subscription"
+                id="email"
+                placeholder="E-mail"
+                required
+              >
               <button class="subscribe__send"></button>
             </div>
           </form>
