--- a/src/index.html
+++ b/src/index.html
@@ -395,7 +395,7 @@
                 placeholder="E-mail"
                 required
               >
-              <button class="subscribe__send"></button>
+              <button type="submit" class="subscribe__send"></button>
             </div>
           </form>
         </div>
