--- a/src/index.html
+++ b/src/index.html
@@ -385,7 +385,7 @@
             Бути в курсі всіх актуальних подій та останніх новин.
           </p>
 
-          <form action="/" method="get">
+          <form action="#" method="get">
             <div class="subscribe__button">
               <input
                 class="subscribe__field"
