fixed overflow-x/deleted link

--- a/src/index.html
+++ b/src/index.html
@@ -40,11 +40,11 @@
 
           <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
 
-          <div class="header__button" href="https://namu.ua/?fbclid=IwAR0moyO6yU7TwwzSioSLjN0J9izEAH4GChk3isxx8eul9nTR7YeihsxyARc">
+          <div class="header__button">
             <div class="button-tickets">
               <a
                 class="button-tickets__link"
-                href="https://namu.ua/?fbclid=IwAR0moyO6yU7TwwzSioSLjN0J9izEAH4GChk3isxx8eul9nTR7YeihsxyARc"
+                href="#tickets"
               >
               квитки
               </a>
