add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -283,7 +283,7 @@
             <img
               src="/images/gallery4.png"
               alt="painting"
-              class="gallery__second"
+              class="gallery__second gallery__last"
             >
           </div>
 
@@ -298,7 +298,7 @@
             <div class="
               grid__item--mobile-1-2
               grid__item--tablet-2-5
-              grid__item--desktop-5-8"
+              grid__item--desktop-4-8"
             >
 
               <h2 class="subscribe__title">Підписка</h2>
@@ -335,7 +335,8 @@
       </div>
     </section>
   </body>
-  <footer class="footer page__footer">
+
+  <footer class="footer page__footer" id="contacts">
     <div class="container">
       <div class="footer__content">
         <div class="logo__container--footer footer__icons">
@@ -417,12 +418,13 @@
               info@namu.kiev.ua
             </a>
           </p>
+          <a class="button__up" href="#"> </a>
         </div>
-
         <div class="footer__line">
-          <a class="footer button__up button__up_hide" href="#"> </a>
+
         </div>
         <div class="footer__list-left">
+
           <li class="footer__item">
             <a class="footer__link" href="#gallery">Галерея</a>
           </li>
