--- a/src/index.html
+++ b/src/index.html
@@ -17,62 +17,64 @@
     </header>
 
     <nav class="menu page__menu" id="menu">
-      <div class="container-wrap">
-        <div class="menu__wrap-content-parent">
-          <div class="menu__wrap-content-child">
-            <div class="menu__icon">
-              <a href="#" class="menu__icon-link"></a>
-            </div>
-            <ul class="list-navigation">
-              <div class="list-navigation__flex-wrap">
-                <div class="list-navigation__flex-wrap-item--left">
-                  <li class="list-navigation__item">
-                    <a href="#gallery" class="list-navigation__item-link">Галерея</a>
-                  </li>
-                  <li class="list-navigation__item">
-                    <a href="#events" class="list-navigation__item-link">Виставки та подіїї</a>
-                  </li>
-                </div>
-
-                <div class="list-navigation__flex-wrap-item--right">
-                  <li class="list-navigation__item">
-                    <a href="#about-us" class="list-navigation__item-link">Про нас</a>
-                  </li>
-                  <li class="menu__list-item">
-                    <a href="#about-us" class="list-navigation__item-link">Контакти</a>
-                  </li>
-                </div>
+      <div class="menu__content">
+        <div class="container-wrap">
+          <div class="menu__wrap-content-parent">
+            <div class="menu__wrap-content-child">
+              <div class="menu__icon">
+                <a href="#" class="menu__icon-link"></a>
               </div>
-            </ul>
-          </div>
+              <ul class="list-navigation">
+                <div class="list-navigation__flex-wrap">
+                  <div class="list-navigation__flex-wrap-item--left">
+                    <li class="list-navigation__item">
+                      <a href="#gallery" class="list-navigation__item-link">Галерея</a>
+                    </li>
+                    <li class="list-navigation__item">
+                      <a href="#events" class="list-navigation__item-link">Виставки та подіїї</a>
+                    </li>
+                  </div>
+
+                  <div class="list-navigation__flex-wrap-item--right">
+                    <li class="list-navigation__item">
+                      <a href="#about-us" class="list-navigation__item-link">Про нас</a>
+                    </li>
+                    <li class="menu__list-item">
+                      <a href="#about-us" class="list-navigation__item-link">Контакти</a>
+                    </li>
+                  </div>
+                </div>
+              </ul>
+            </div>
 
 
-          <div class="work-shelude">
-            <h3 class="work-shelude__title">Графік роботи</h3>
-            <ul class="work-shelude__list">
-              <li class="work-shelude__list-item">
-                <strong>12:00 - 20.00</strong> середа
-              </li>
-              <li class="work-shelude__list-item">
-                <strong>12:00 - 20.00</strong> четверг
-              </li>
-              <li class="work-shelude__list-item">
-                <strong>12:00 - 20.00</strong>пятниця
-              </li>
-              <li class="work-shelude__list-item">
-                <strong>12:00 - 20.00</strong> субота
-              </li>
-              <li class="work-shelude__list-item">
-                <strong>12:00 - 20.00</strong> неділя
-              </li>
-            </ul>
-          </div>
+            <div class="work-shelude">
+              <h3 class="work-shelude__title">Графік роботи</h3>
+              <ul class="work-shelude__list">
+                <li class="work-shelude__list-item">
+                  <strong>12:00 - 20.00</strong> середа
+                </li>
+                <li class="work-shelude__list-item">
+                  <strong>12:00 - 20.00</strong> четверг
+                </li>
+                <li class="work-shelude__list-item">
+                  <strong>12:00 - 20.00</strong>пятниця
+                </li>
+                <li class="work-shelude__list-item">
+                  <strong>12:00 - 20.00</strong> субота
+                </li>
+                <li class="work-shelude__list-item">
+                  <strong>12:00 - 20.00</strong> неділя
+                </li>
+              </ul>
+            </div>
 
-          <div class="work-description">
-            <strong>Вихідні</strong>: понеділок, вівторок
-            <br>
-            Каса припиняє роботу за 1 годину
-            до закриття музею
+            <div class="work-description">
+              <strong>Вихідні</strong>: понеділок, вівторок
+              <br>
+              Каса припиняє роботу за 1 годину
+              до закриття музею
+            </div>
           </div>
         </div>
       </div>
@@ -86,7 +88,7 @@
           </div>
 
           <h1 class="title">
-            <a href="/" class="title__link">
+            <a href="#" class="title__link">
               NA
               <br>
               MU
@@ -167,7 +169,7 @@
                         </div>
 
                         <h3 class="event__title">
-                          <a href="/" class="event__title-link">Йду і повертаюсь</a>
+                          <a href="#" class="event__title-link">Йду і повертаюсь</a>
                         </h3>
 
                         <p class="event__description">
@@ -208,7 +210,7 @@
                         </div>
 
                         <h3 class="event__title">
-                          <a href="/" class="event__title-link">І спогади і мрії</a>
+                          <a href="#" class="event__title-link">І спогади і мрії</a>
                         </h3>
 
                         <p class="event__description">
@@ -232,7 +234,7 @@
               <span class="lection__data--time">26/08/2019 - 11:00</span>
             </div>
             <h3 class="lection__title">
-              <a href="/" class="lection__title-link">
+              <a href="#" class="lection__title-link">
                 Від класицизму до<br> романтизму
               </a>
             </h3>
@@ -385,7 +387,7 @@
                       title--footer
                       footer__title
                       ">
-                        <a href="/" class="title__link">
+                        <a href="#" class="title__link">
                           NA
                           <br>
                           MU
@@ -512,7 +514,7 @@
                             <a href="#about-us" class="list-navigation__item-link list-navigation__item-link--foter">Про нас</a>
                           </li>
                           <li class="menu__list-item">
-                            <a href="/" class="list-navigation__item-link list-navigation__item-link--foter">Контакти</a>
+                            <a href="#" class="list-navigation__item-link list-navigation__item-link--foter">Контакти</a>
                           </li>
                         </div>
                       </div>
