--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,134 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="page" lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link
+      rel="shortcut icon"
+      href="/images/favicon.ico"
+      type="image/x-icon"
+    >
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="anonymous"
+    >
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body page__body--with-menu">
+    <header class="page__header header">
+      <nav>
+        <a href="#menu" class="header__menu"></a>
+
+        <a href="/" class="header__logo">NA MU</a>
+      </nav>
+
+      <img
+        class="header__image"
+        src="./images/Natsionalnij-hudozhnij-muzej-Ukrayini.jpg"
+        alt="ХУДОЖНІЙ МУЗЕЙ"
+      >
+
+      <div class="header__wrraper">
+        <h1 class="header__title">ХУДОЖНІЙ<br>МУЗЕЙ</h1>
+
+        <a href="#subscribe" class="header__button button">
+          <span class="button__left">
+            КВИТКИ
+          </span>
+          <span class="button__right"></span>
+        </a>
+      </div>
+
+      <a href="#actualy" class="header__events-link">ПОДІЇ</a>
+    </header>
+
+    <nav class="page__menu menu" id="menu">
+      <div class="menu__container">
+        <div class="menu__wrapper">
+          <div class="menu__navigation">
+            <a href="#" class="menu__close-link">
+              <img
+                src="./images/cross.svg"
+                class="menu__close-icon"
+                alt="icon"
+              >
+            </a>
+            <ul class="menu__list">
+              <li>
+                <a href="#gallery" class="menu__list-item">
+                  Галерея
+                </a>
+              </li>
+              <li>
+                <a href="#subscribe" class="menu__list-item">
+                  Про Нас
+                </a>
+              </li>
+              <li>
+                <a href="#actualy" class="menu__list-item">
+                  Виставки та події
+                </a>
+              </li>
+              <li>
+                <a href="#contact" class="menu__list-item">
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="menu__schedule">
+            <div class="menu__schedule-title">
+              Графік роботи
+            </div>
+            <div class="menu__schedule-box">
+              <ul class="menu__schedule-list">
+                <li>
+                  <span class="menu__schedule-item">12:00 — 20:00</span> середа
+                </li>
+                <li>
+                  <span class="menu__schedule-item">12:00 — 20:00</span> четвер
+                </li>
+                <li>
+                  <span class="menu__schedule-item">12:00 — 20:00</span> п’ятниця
+                </li>
+                <li>
+                  <span class="menu__schedule-item">11:00 — 19:00</span> субота
+                </li>
+                <li>
+                  <span class="menu__schedule-item">11:00 — 19:00</span> неділя
+                </li>
+              </ul>
+              <div class="menu__schedule-weekend">
+                <span class="menu__schedule-item">Вихідні:</span> понеділок, вівторок<br>Каса припиняє роботу а 1 годину до закриття музею
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </nav>
+
+    <main>
+      <section class="page__actualy" id="actualy">
+        
+      </section>
+
+      <section class="page__gallery" id="gallery">
+
+      </section>
+
+      <section class="page__subscribe" id="subscribe">
+
+      </section>
+    </main>
+
+    <footer class="page__footer" id="contact">
+
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
