--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
       <nav>
         <a href="#menu" class="header__menu"></a>
 
-        <a href="/" class="header__logo">NA MU</a>
+        <a href="#" class="header__logo">NA MU</a>
       </nav>
 
       <img
