--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,13 @@
   <body class="page__body page__body--with-menu">
     <header class="page__header header">
       <nav>
-        <a href="#menu" class="header__menu"></a>
+        <a href="#menu" class="header__menu">
+          <img
+            src="./images/menu.svg"
+            class="header__menu-icon"
+            alt="icon"
+          >
+        </a>
 
         <a href="#" class="header__logo">NA MU</a>
       </nav>
@@ -113,8 +119,98 @@
     </nav>
 
     <main>
-      <section class="page__actualy" id="actualy">
-        
+      <section class="page__actualy actualy" id="actualy">
+        <div class="container">
+          <h2 class="actualy__title">
+            Актуальні події
+          </h2>
+
+          <section class="actualy__event">
+            <img
+              src="./images/ydu-i-povertayus.jpg"
+              class="actualy__event-image"
+              alt="Йду і повертаюсь"
+            >
+
+            <div class="actualy__event-description">
+              <div class="actualy__event-name-date">
+                <div class="actualy__event-name">
+                  ВИСТАВКА
+                </div>
+
+                <div class="actualy__event-date">
+                  26.08-29.11.2019
+                </div>
+              </div>
+
+              <h3 class="actualy__event-title">
+                Йду і повертаюсь
+              </h3>
+
+              <div class="actualy__event-text">
+                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+              </div>
+            </div>
+          </section>
+
+          <section class="actualy__event">
+            <img
+              src="./images/i-spogady-i-mrii.jpg"
+              class="actualy__event-image"
+              alt="І спогади і мрії"
+            >
+
+            <div class="actualy__event-description">
+              <div class="actualy__event-name-date">
+                <div class="actualy__event-name">
+                  ВИСТАВКА
+                </div>
+
+                <div class="actualy__event-date">
+                  26.08-29.11.2019
+                </div>
+              </div>
+
+              <h3 class="actualy__event-title">
+                І спогади і мрії
+              </h3>
+
+              <div class="actualy__event-text">
+                Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </div>
+            </div>
+          </section>
+
+          <section class="actualy__lecture">
+            <!-- <img src="./images/vid-klasicizmu-do-romantizmu.jpg" class="actualy__lecture-image" alt="Від класицизму до романтизму"> -->
+
+            <picture>
+              <source srcset="./images/vid-klasicizmu-do-romantizmu-1280.jpg" media="(min-width: 1280px)">
+              <source srcset="./images/vid-klasicizmu-do-romantizmu-768.jpg" media="(min-width: 768px)">               
+              <img
+                src="./images/vid-klasicizmu-do-romantizmu-320.jpg"
+                class="actualy__lecture-image"
+                alt="Від класицизму до романтизму"
+              >
+            </picture>            
+
+            <div class="actualy__lecture-description">
+              <div class="actualy__event-name-date actualy__event-name-date--lecture">
+                <div class="actualy__event-name actualy__event-name--lecture">
+                  ЛЕКЦІЯ
+                </div>
+
+                <div class="actualy__event-date">
+                  26/08/2019 - 11:00
+                </div>
+              </div>
+
+              <h3 class="actualy__event-title actualy__event-title--lecture">
+                Від класицизму до романтизму
+              </h3>
+            </div>
+          </section>
+        </div>
       </section>
 
       <section class="page__gallery" id="gallery">
