fix after review

--- a/src/index.html
+++ b/src/index.html
@@ -131,6 +131,8 @@
       </div>
     </div>
 
+    <div class="overlay"></div>
+
     <main>
       <section class="page__section ivent" id="ivent">
         <div class="container">
@@ -346,16 +348,16 @@
 
               <div class="footer__first-conteiner-links">
                 <a
-                  target="_blank"
                   href="https://www.facebook.com/"
+                  target="_blank"
                   class="
                     footer__first-conteiner-link
                     footer__first-conteiner-link--facebook
                 "></a>
 
                 <a
-                  target="_blank"
                   href="https://www.instagram.com/"
+                  target="_blank"
                   class="
                     footer__first-conteiner-link
                     footer__first-conteiner-link--instagram
