add links in desktop version

--- a/src/index.html
+++ b/src/index.html
@@ -327,14 +327,20 @@
             <a href="#" class="footer__logo"></a>
 
             <div class="footer__first-conteiner-links">
-              <a href="#" class="
-                footer__first-conteiner-link
-                footer__first-conteiner-link--facebook
+              <a
+                href="https://www.facebook.com/"
+                target="_blank"
+                class="
+                  footer__first-conteiner-link
+                  footer__first-conteiner-link--facebook
               "></a>
 
-              <a href="#" class="
-                footer__first-conteiner-link
-                footer__first-conteiner-link--instagram
+              <a
+                href="https://www.instagram.com/"
+                target="_blank"
+                class="
+                  footer__first-conteiner-link
+                  footer__first-conteiner-link--instagram
               "></a>
             </div>
           </div>
