--- a/src/index.html
+++ b/src/index.html
@@ -120,11 +120,11 @@
           <h2 class="events__title title">Актуальні події</h2>
 
           <div class="events__event event">
-            <!-- <img
+            <img
               src="../src/images/events/event-1.jpg"
               alt="event image"
               class="event__image"
-            > -->
+            >
 
             <div class="event__details">
               <div class="event__subtitle">
