--- a/src/index.html
+++ b/src/index.html
@@ -141,11 +141,11 @@
           </div>
 
           <div class="events__event event">
-            <img
+            <!-- <img
               src="../src/images/events/event-2.jpg"
               alt="event image"
               class="event__image"
-            >
+            > -->
 
             <div class="event__details">
               <div class="event__subtitle">
