--- a/src/index.html
+++ b/src/index.html
@@ -178,11 +178,11 @@
           <h2 class="gallery__title title">Галерея</h2>
           <div class="gallery__slides">
             <div class="gallery__slide">
-              <!-- <img
+              <img
                 src="./images/gallery/slide-1.jpg"
                 alt="gallery image"
                 class="gallery__img"
-              > -->
+              >
             </div>
             <div class="gallery__slide">
               <!-- <img
@@ -192,11 +192,11 @@
               > -->
             </div>
             <div class="gallery__slide">
-              <!-- <img
+              <img
                 src="./images/gallery/slide-3.jpg"
                 alt="gallery image"
                 class="gallery__img"
-              > -->
+              >
             </div>
             <div class="gallery__slide">
               <!-- <img
@@ -210,11 +210,11 @@
           <div class="gallery__swiper swiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <!-- <img
+                <img
                   src="./images/gallery/slide-1.jpg"
                   alt="gallery image"
                   class="swiper-img "
-                > -->
+                >
               </div>
               <div class="swiper-slide">
                 <!-- <img
@@ -224,11 +224,11 @@
                 > -->
               </div>
               <div class="swiper-slide">
-                <!-- <img
+                <img
                   src="./images/gallery/slide-3.jpg"
                   alt="gallery image"
                   class="swiper-img "
-                > -->
+                >
               </div>
               <div class="swiper-slide">
                 <!-- <img
