--- a/src/index.html
+++ b/src/index.html
@@ -185,11 +185,11 @@
               >
             </div>
             <div class="gallery__slide">
-              <!-- <img
+              <img
                 src="./images/gallery/slide-2.jpg"
                 alt="gallery image"
                 class="gallery__img"
-              > -->
+              >
             </div>
             <div class="gallery__slide">
               <img
@@ -199,11 +199,11 @@
               >
             </div>
             <div class="gallery__slide">
-              <!-- <img
+              <img
                 src="./images/gallery/slide-4.jpg"
                 alt="gallery image"
                 class="gallery__img"
-              > -->
+              >
             </div>
           </div>
 
@@ -217,11 +217,11 @@
                 >
               </div>
               <div class="swiper-slide">
-                <!-- <img
+                <img
                   src="./images/gallery/slide-2.jpg"
                   alt="gallery image"
                   class="swiper-img "
-                > -->
+                >
               </div>
               <div class="swiper-slide">
                 <img
@@ -231,11 +231,11 @@
                 >
               </div>
               <div class="swiper-slide">
-                <!-- <img
+                <img
                   src="./images/gallery/slide-4.jpg"
                   alt="gallery image"
                   class="swiper-img "
-                > -->
+                >
               </div>
             </div>
             <div class="swiper-pagination"></div>
