--- a/src/index.html
+++ b/src/index.html
@@ -403,7 +403,7 @@
                 <a href="tel:+38 (044) 278-13-57">
                   факс: +38 (044) 278-13-57
                 </a><br>
-                <a href="e-mail:info@namu.kiev.ua">
+                <a href="mailto:info@namu.kiev.ua">
                   e-mail: info@namu.kiev.ua
                 </a><br>
               </p>
