--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Художній музей</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+    >
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <script
+      type="text/javascript"
+      src="scripts/main.js"
+      defer
+    ></script>
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+  <body class="page__body">
+    <header class="header">
+      <div class="header__container">
+        <div class="header__content">
+          <nav class="header__top">
+            <div class="header__icon-box">
+              <a href="#burger" class="icon icon--menu"></a>
+            </div>
+
+            <div href="#" class="logo">
+              <a class="logo-box">
+                NA <br> MU
+              </a>
+            </div>
+          </nav>
+          <div class="header__img"></div>
+
+          <div class="header__box">
+            <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+            <div class="header__tickets">
+              <div></div>
+
+              <a href="#" class="header__button button">
+
+                <div class="button__rec">КВИТКИ</div>
+
+                <div class="button__green-rec">
+                </div>
+              </a>
+            </div>
+            <a href="#" class="header__events">ПОДІЇ</a>
+          </div>
+        </div>
+      </div>
+    </header>
   </body>
 </html>
